--- a/Incertitude.ipynb
+++ b/Incertitude.ipynb
@@ -170,15 +170,15 @@
     "\n",
     "\n",
     "for i in range (1,Nu+1):\n",
-    "    x.append(random.uniform(mu-Delta, mu+Delta)) #distribution uniforme entre m-sigma et m+sigma\n",
+    "    x.append(random.uniform(mu-Delta, mu+Delta)) #distribution uniforme entre m-Delta et m+Delta\n",
     "\n",
     "plt.hist(x,bins=100,range=(0.,5.))\n",
     "plt.title(\"Histogramme loi uniforme\")\n",
     "\n",
     "me=statistics.mean(x)# moyenne expérimentale des x\n",
     "print('moyenne expérimentale =',me)\n",
-    "sigmae=statistics.pstdev(x) #écart type expériemtal de x\n",
-    "sigmath=sigmau/sqrt(3) #écart type théorique de x\n",
+    "sigmae=statistics.pstdev(x) #écart type expérimental de x\n",
+    "sigmath=Delta/sqrt(3) #écart type théorique de x\n",
     "print('écart type expériemtal=',sigmae,'Delta/sqrt(3) =',sigmath\n",
     "      )"
    ]
