--- a/Incertitude.ipynb
+++ b/Incertitude.ipynb
@@ -116,7 +116,7 @@
     "\n",
     "sigmamoy=statistics.pstdev(mo) #écart type expériemtal des moyennes\n",
     "sigmamoye=sigma/sqrt(N) # écart type theorique des moyennes\n",
-    "print('écart type expériemtal des moyennes=',sigmamoy,'sigma/sqrt(n)=',sigmamoye)"
+    "print('écart type expérimental des moyennes=',sigmamoy,'sigma/sqrt(n)=',sigmamoye)"
    ]
   },
   {
@@ -124,7 +124,7 @@
    "id": "ceae23ec",
    "metadata": {},
    "source": [
-    "écart type expériemtal des moyennes= 0.015724927265771526 sigma/sqrt(N)= 0.015811388300841896"
+    "écart type expérimental des moyennes= 0.015724927265771526 sigma/sqrt(N)= 0.015811388300841896"
    ]
   },
   {
