Allégement histogramme poyen

--- a/Incertitude.ipynb
+++ b/Incertitude.ipynb
@@ -33,7 +33,7 @@
    "id": "c91e2b99",
    "metadata": {},
    "source": [
-    "## Incertitude de type A : évaluation de l'écart-type, loi normale\n",
+    "## III Incertitude de type A : évaluation de l'écart-type, loi normale\n",
     "\n",
     "Lorsque le nombre de mesure augmente, la plupart des mesures suivent une loi normale (on parle de \"loi des grands nombres\". On caractérise alors la distributionn des mesures par une moyenne et un écart-type.\n",
     "\n",
@@ -85,7 +85,8 @@
    "id": "58758902",
    "metadata": {},
    "source": [
-    "La statistique de la moyenne est plus intéressante, nous allons vérifier numériquement que l'écart type des valeurs moyenne est réduite d'un facteur $\\sqrt{N}$. Attention le programme suivant est assez long à exécuter...pour gagner du temps un résultat typique est inséré en dessous."
+    "La statistique de la moyenne est plus intéressante, nous allons vérifier numériquement que l'écart type des valeurs moyenne est réduite d'un facteur $\\sqrt{N}$. \n",
+    "Le programme suivant est assez long à exécuter...les valeurs de $N$ et $p$ ont été diminuées pour que le résultat s'affiche en un temps raisonnable, mais un résultat typique obtenu avec de plus grandes valeurs de $N$ et $p$ est inséré en dessous."
    ]
   },
   {
@@ -98,7 +99,9 @@
     "\n",
     "from math import sqrt\n",
     "\n",
-    "p=200 #nombre de séries de mesures\n",
+    "p=20 #nombre de séries de mesures\n",
+    "N=1000 # nombre de mesures\n",
+    "#ces valeurs sont faibles, pour que le programme ne prenne pas trop de temps\n",
     "\n",
     "mo=[]\n",
     "\n",
@@ -124,6 +127,8 @@
    "id": "ceae23ec",
    "metadata": {},
    "source": [
+    "Résultat avec $N=$10000 et $p=200$\n",
+    "\n",
     "écart type expérimental des moyennes= 0.015724927265771526 sigma/sqrt(N)= 0.015811388300841896"
    ]
   },
@@ -148,7 +153,7 @@
    "id": "481a812d",
    "metadata": {},
    "source": [
-    "## Incertitude de type B, loi uniforme\n",
+    "## IV Incertitude de type B, loi uniforme\n",
     "Lorsqu'on ne fait qu'une seule mesure expérimentale notée $m$, ou lorsque les différentes mesures réalisées conduisent toujours au même résultat $m$ car la précision de l'instrument de mesure ne permet pas de mettre en évidence les fluctuations de la mesure, on procède différemment pour évaluer l'incertitude-type.\n",
     "On considèrera souvent que la mesure est raisonnablement comprise dans un intervalle $m-\\Delta, m+\\Delta$, la valeur de $\\Delta$ s'évalue soit expérimentalemenyt soit à partir des caractéristiques de l'intrument de mesure utilisé., avec une loi de probabilité uniforme.\n",
     "On admet, et on va vérifier numériquement, que l'incertitude-type est donnée par \n",
@@ -172,7 +177,7 @@
     "\n",
     "\n",
     "for i in range (1,Nu+1):\n",
-    "    x.append(random.uniform(mu-Delta, mu+Delta)) #distribution uniforme entre m-Delta et m+Delta\n",
+    "    x.append(random.uniform(mu-Delta, mu+Delta)) #distribution uniforme entre mu-Delta et mu+Delta\n",
     "\n",
     "plt.hist(x,bins=100,range=(0.,5.))\n",
     "plt.title(\"Histogramme loi uniforme\")\n",
@@ -190,7 +195,7 @@
    "id": "42734244",
    "metadata": {},
    "source": [
-    "## Propagation des incertitudes\n",
+    "## V Propagation des incertitudes\n",
     "Lorsqu'une grandeur expérimentale $y$ est calculée à partir de la mesure de plusieurs autres grandeurs $x_i$ avec $y=f(x_1, x_2..)$, plusieurs cas se présentent :\n",
     "- cas favorable, assez courant : une des grandeurs, par exemple $x_1$, est entachée d'une plus grande incertitude que les autres, c'est celle qui va limiter la précision de la mesure et on pourra écrire :\n",
     "\n",
@@ -245,7 +250,7 @@
    "id": "8d9867e7",
    "metadata": {},
    "source": [
-    "## Validation d'un résultat expérimental : écart normalisé\n",
+    "## VI Validation d'un résultat expérimental : écart normalisé\n",
     "Une fois la mesure faite, il faut donner le résultat sour la forme $$X_{mes}=... \\text{ et } u(X)=...$$ \n",
     "en ne gardant que 2 chiffres significatifs pour $u(X)$ et en ajustant en conséquence ceux de $X$.\n",
     "Il reste ensuite à évaluer la pertinence de la mesure en la comparant à la valeur attendue appelée valeur de référence $X_{ref}$ (résultat d'un calcul littéral issu d'un modèle, valeur tabulée...). Comme on a 95% de chances que la valeur exacte soit comprise dans l'intervalle $[X_{mes}-2u(X), X_{mes}+2u(X)]$ on évalue un **écart normalisé** défini par \n",
