Dernières coquilles corrigées

--- a/Incertitude.ipynb
+++ b/Incertitude.ipynb
@@ -6,18 +6,30 @@
    "metadata": {},
    "source": [
     "# Evaluer les incertitudes dans un TP de physique\n",
+    "\n",
     "## I Position du problème\n",
+    "\n",
     "La physique est une science expérimentale. Les expériences visent à confirmer ou infirmer un modèle théorique. Pour cela il faut pouvoir faire des mesures et les comparer avec des résultats attendus ce qui nécessite de connaitre la confiance accordée aux mesures. \n",
+    "\n",
     "## II Vocabulaire \n",
+    "\n",
     "### 1- Erreur systématique\n",
-    "C'est une erreur qui est toujours dans le même sens, elle peut etre liée soit à un protocole expérimental non juste (exempel : montage longue ou courte dérivation pour mesurer une résuistance avec un voltmètre et un ampréremètre) soit à un instrument de mesure faux (mal calibré, endommagée... par exemple une montre qui avance)\n",
-    "Ce type de mesure est difficile à éliminer, il faut améliorer le processus expérimental : protocole plus adapté, instrument de mesure plus juste.\n",
+    "\n",
+    "C'est une erreur qui se produit toujours dans le même sens, elle peut etre liée soit à un protocole expérimental non juste (exemple : montage longue ou courte dérivation pour mesurer une résuistance avec un voltmètre et un ampéremètre) soit à un instrument de mesure faux (mal calibré, endommagé... par exemple une montre qui avance).\n",
+    "\n",
+    "Ce type de mesure est difficile à éliminer, il faut améliorer le processus expérimental : protocole mieux adapté, instrument de mesure plus juste.\n",
+    "\n",
     "### 2- Erreur aléatoire\n",
-    "Les instruments de mesure et les expérimentateurs n'étaient jamais parfaits, la mesure est intrinsèquement variable et lorsqu'on la répère on ne retrouve pas toujours la même valeur. Il faut alors avoir une idée de la **dispersion de la mesure**, on évaluera un écart-type et on parlera d'incertitude type, qui permettra de valider l'accord entre modèle et théorie avec un **écart normalisé** (cf suite du document pour des définitions de ces 2 notions)\n",
+    "\n",
+    "Les instruments de mesure et les expérimentateurs n'étant jamais parfaits, la mesure est intrinsèquement variable et lorsqu'on la répète on ne retrouve pas toujours la même valeur. Il faut alors avoir une idée de la **variabilité de la mesure**, on évaluera un écart-type et on parlera d'incertitude type, qui permettra de valider l'accord entre modèle et théorie avec un **écart normalisé** (cf suite du document pour des définitions de ces 2 notions)\n",
+    "\n",
     "### 3- Incertitude de type A\n",
+    "\n",
     "C'est une incertitude statistique, évaluée à partir d'une série de mesures de la même grandeur. \n",
+    "\n",
     "### 4-Incertitude de type B\n",
-    "Lorsque la mesure ne peut pas être renouvellée un nombre suffisant de fois, ou lorsque la variabilité de la mesure n'apparait pas (instrument de mesure trop grossier par exemple) on évalue l'incertitude à partir des caractéristiques de l'instrument de mesure.\n"
+    "\n",
+    "Lorsque la mesure ne peut pas être renouvelée un nombre suffisant de fois, ou lorsque la variabilité liée à la mesure n'apparait pas (instrument de mesure trop grossier par exemple) on évalue l'incertitude à partir des caractéristiques de l'instrument de mesure.\n"
    ]
   },
   {
@@ -37,19 +49,19 @@
     "\n",
     "Lorsque le nombre de mesure augmente, la plupart des mesures suivent une loi normale (on parle de \"loi des grands nombres\". On caractérise alors la distributionn des mesures par une moyenne et un écart-type.\n",
     "\n",
-    "Pour $N$ mesures indépendantes on montre que la meilleure évaluation des valeurs de la moyenne et de l'écart-type correspond à : #\n",
+    "Pour $N$ mesures indépendantes on montre que la meilleure évaluation des valeurs de la moyenne et de l'écart-type correspondent à : \n",
     "\n",
     "$$\\overline{x}=\\frac{\\sum_{i=1}^N x_i}{N}$$\n",
     "\n",
     "$$u(x)=\\sqrt{\\frac{\\sum_{i=1}^N (x_i-\\overline{x})^2}{N-1}}$$\n",
     "\n",
-    "C'est ce que calculent les calculatrices ou les tableurs (excell par ex)\n",
+    "C'est ce que calculent les calculatrices ou les tableurs (excel par ex)\n",
     "\n",
-    "Statistiquement 68% des mesures seront comprises dans l'intervalle $[\\overline{x}-u(x),\\overline{x}+u(x)]$\n",
+    "Statistiquement  pour une distribution normale 68% des mesures seront comprises dans l'intervalle $[\\overline{x}-u(x),\\overline{x}+u(x)]$\n",
     "\n",
     "Il faut élargir l'intervalle à 2 écart-types pour avoir 95% des mesures, c'est ce qu'on fera dans la suite. \n",
     "\n",
-    "Remarque : en toute rigueur ces résultats ne sont valables que si $N\\rightarrow \\infty$, sinon il faut multiplier par des coeffcients de Student, ce qui dépasse largement les connaissances que vous devez avoir sur le sujet et au delà de $N=10$ on peut considérer que la règle simple suffit.\n",
+    "Remarque : en toute rigueur ces résultats ne sont valables que si $N\\rightarrow \\infty$, sinon il faut multiplier par des coeffcients correctifs appelés coefficients de Student, ce qui dépasse largement les connaissances que vous devez avoir sur le sujet. Au delà de $N=10$ on peut considérer que la règle simple suffit.\n",
     "\n",
     "Nous allons **simuler une loi normale et construire un histogramme** en utilisant un code Python"
    ]
@@ -64,7 +76,7 @@
     "import random\n",
     "import statistics\n",
     "import matplotlib.pyplot as plt\n",
-    "x=[]\n",
+    "x=[] #contiendra l'ensemble des mesures simulées\n",
     "N=10000 # nombre de mesures\n",
     "m=2.5 # moyenne visée\n",
     "sigma=0.5 #écart type visé\n",
@@ -76,8 +88,8 @@
     "plt.title(\"Histogramme loi gaussienne\")\n",
     "me=statistics.mean(x)# moyenne expérimentale des x\n",
     "print('moyenne expérimentale =',me)\n",
-    "sigmae=statistics.pstdev(x) #écart type expériemtal de x\n",
-    "print('écart type expériemtal=',sigmae)"
+    "sigmae=statistics.pstdev(x) #écart type expérimental de x\n",
+    "print('écart type expérimental=',sigmae)"
    ]
   },
   {
@@ -86,7 +98,7 @@
    "metadata": {},
    "source": [
     "La statistique de la moyenne est plus intéressante, nous allons vérifier numériquement que l'écart type des valeurs moyenne est réduite d'un facteur $\\sqrt{N}$. \n",
-    "Le programme suivant est assez long à exécuter...les valeurs de $N$ et $p$ ont été diminuées pour que le résultat s'affiche en un temps raisonnable, mais un résultat typique obtenu avec de plus grandes valeurs de $N$ et $p$ est inséré en dessous."
+    "Le programme suivant est assez long à exécuter si on choist des valeurs pertinantes de $N$ et $p$... elles ont été diminuées pour que le résultat s'affiche en un temps raisonnable, mais un résultat typique obtenu avec de plus grandes valeurs de $N$ et $p$ est inséré en dessous."
    ]
   },
   {
@@ -111,8 +123,6 @@
     "        x.append(random.gauss(m,sigma)) #série i : gaussienne(moyenne, écart type)\n",
     "        mi=statistics.mean(x) #moyenne de la série i\n",
     "    mo.append(mi)# liste des moyennes expérimentales     \n",
-    "    \n",
-    "print(mo)\n",
     "\n",
     "plt.hist(mo,bins=50,range=(2.4,2.6)) #histogramme des moyennes\n",
     "plt.title(\"histogramme des moyennes\")\n",
@@ -127,9 +137,9 @@
    "id": "ceae23ec",
    "metadata": {},
    "source": [
-    "Résultat avec $N=$10000 et $p=200$\n",
+    "Résultat avec $N=10000$ et $p=200$\n",
     "\n",
-    "écart type expérimental des moyennes= 0.015724927265771526 sigma/sqrt(N)= 0.015811388300841896"
+    "écart type expérimental des moyennes= 0.015724927265771526 ;  sigma/sqrt(N)= 0.015811388300841896"
    ]
   },
   {
@@ -154,8 +164,10 @@
    "metadata": {},
    "source": [
     "## IV Incertitude de type B, loi uniforme\n",
-    "Lorsqu'on ne fait qu'une seule mesure expérimentale notée $m$, ou lorsque les différentes mesures réalisées conduisent toujours au même résultat $m$ car la précision de l'instrument de mesure ne permet pas de mettre en évidence les fluctuations de la mesure, on procède différemment pour évaluer l'incertitude-type.\n",
-    "On considèrera souvent que la mesure est raisonnablement comprise dans un intervalle $m-\\Delta, m+\\Delta$, la valeur de $\\Delta$ s'évalue soit expérimentalemenyt soit à partir des caractéristiques de l'intrument de mesure utilisé., avec une loi de probabilité uniforme.\n",
+    "Lorsqu'on ne fait qu'une seule mesure expérimentale, notée $m$, ou lorsque les différentes mesures réalisées conduisent toujours au même résultat $m$ car la précision de l'instrument de mesure ne permet pas de mettre en évidence les fluctuations de la mesure, on procède différemment pour évaluer l'incertitude-type.\n",
+    "\n",
+    "On considèrera souvent que la mesure est raisonnablement comprise dans un intervalle $m-\\Delta, m+\\Delta$, la valeur de $\\Delta$ s'évalue soit expérimentalement soit à partir des caractéristiques de l'instrument de mesure utilisé, avec une loi de probabilité uniforme.\n",
+    "\n",
     "On admet, et on va vérifier numériquement, que l'incertitude-type est donnée par \n",
     "$$u=\\frac{\\Delta}{\\sqrt{3}}$$"
    ]
@@ -200,12 +212,14 @@
     "- cas favorable, assez courant : une des grandeurs, par exemple $x_1$, est entachée d'une plus grande incertitude que les autres, c'est celle qui va limiter la précision de la mesure et on pourra écrire :\n",
     "\n",
     "$$u(y)=|\\frac{\\partial f}{\\partial y_1}|u(x_1)$$\n",
-    "- cas plus pénible : plusieurs grandeurs sont antéchées d'erreurs relatives du même ordre de grandeur, alors on montre que \n",
+    "- cas plus pénible : plusieurs grandeurs sont entachées d'erreurs relatives du même ordre de grandeur, alors on montre que \n",
     "\n",
     "$$u(y)=\\sqrt{\\sum_i (\\frac{\\partial f}{\\partial y_i})^2 u(x_i)^2}$$\n",
     "\n",
     "Il faut donc calculer cette somme.\n",
+    "\n",
     "On peut aussi proécder avec une simulation numérique de MonteCarlo en créant une fluctuation aléatoire des différentes variables $x_i$ pour évaluer l'écart type sur $x$.\n",
+    "\n",
     "Un exemple de ce type de calcul suit, pour la mesure de la focale d'une lentille mince convergente à partir de la position d'un objet et de son image, on voit que la simulation est pertinente par rapport à la formule explicite, on pourra donc utiliser cette méthode lorsque les calculs sont compliqués.\n"
    ]
   },
@@ -252,16 +266,21 @@
    "source": [
     "## VI Validation d'un résultat expérimental : écart normalisé\n",
     "Une fois la mesure faite, il faut donner le résultat sour la forme $$X_{mes}=... \\text{ et } u(X)=...$$ \n",
+    "\n",
     "en ne gardant que 2 chiffres significatifs pour $u(X)$ et en ajustant en conséquence ceux de $X$.\n",
-    "Il reste ensuite à évaluer la pertinence de la mesure en la comparant à la valeur attendue appelée valeur de référence $X_{ref}$ (résultat d'un calcul littéral issu d'un modèle, valeur tabulée...). Comme on a 95% de chances que la valeur exacte soit comprise dans l'intervalle $[X_{mes}-2u(X), X_{mes}+2u(X)]$ on évalue un **écart normalisé** défini par \n",
+    "\n",
+    "Il reste ensuite à évaluer la pertinence de la mesure en la comparant à la valeur attendue appelée valeur de référence $X_{ref}$ (résultat d'un calcul littéral issu d'un modèle, valeur tabulée...). Comme on a 95% de chances que la valeur exacte soit comprise dans l'intervalle $[X_{mes}-2u(X), X_{mes}+2u(X)]$ on évalue un **écart normalisé** défini par\n",
+    "\n",
     "$$z=\\frac{|X_{mes}-X_{ref}|}{u(X)}$$\n",
+    "\n",
     "on peut valider la mesure (ou le modèle, ou le protocole... tout dépend de ce qu'on considère comme certain !) si \n",
     "$$z<2$$\n",
     "puisqu'alors $X_{ref}$ est dans l'intervalle de confiance à 95%.\n",
     "\n",
-    "On peut de la même façon tester la compatibilité d'une mesure au sein d'un ensemble de mesure en calculant \n",
+    "On peut de la même façon tester la compatibilité d'une mesure au sein d'un ensemble de mesures en calculant \n",
     "\n",
     "$$z=\\frac{X-\\overline{X}}{u(X)}$$ \n",
+    "\n",
     "avec le même critère : on doit avoir $z<2$ sinon la mesure n'est pas pertinente.\n",
     "\n",
     "On peut enfin comparer 2 mesures différentes en définissant \n",
