Corrections après essai en classe

--- a/Incertitude.ipynb
+++ b/Incertitude.ipynb
@@ -84,7 +84,7 @@
     "for i in range (1,N+1):\n",
     "    x.append(random.gauss(m,sigma)) #gaussienne(moyenne, écart type)\n",
     "\n",
-    "plt.hist(x,bins=100,range=(0.,5.))\n",
+    "plt.hist(x,bins=100,range=(0.,5.)) # bins donne le nombre d'intervalle, ici identique, range=(min,max) spécifie la largeur de l'intervalle du graphe\n",
     "plt.title(\"Histogramme loi gaussienne\")\n",
     "me=statistics.mean(x)# moyenne expérimentale des x\n",
     "print('moyenne expérimentale =',me)\n",
@@ -97,8 +97,7 @@
    "id": "58758902",
    "metadata": {},
    "source": [
-    "La statistique de la moyenne est plus intéressante, nous allons vérifier numériquement que l'écart type des valeurs moyenne est réduite d'un facteur $\\sqrt{N}$. \n",
-    "Le programme suivant est assez long à exécuter si on choist des valeurs pertinantes de $N$ et $p$... elles ont été diminuées pour que le résultat s'affiche en un temps raisonnable, mais un résultat typique obtenu avec de plus grandes valeurs de $N$ et $p$ est inséré en dessous."
+    "La statistique de la moyenne est plus intéressante. Nous allons vérifier numériquement que l'écart type des valeurs moyenne est réduite d'un facteur $\\sqrt{N}$ avec le programme suivant. "
    ]
   },
   {
@@ -111,8 +110,8 @@
     "\n",
     "from math import sqrt\n",
     "\n",
-    "p=20 #nombre de séries de mesures\n",
-    "N=1000 # nombre de mesures\n",
+    "p=200 #nombre de séries de mesures\n",
+    "N=10000 # nombre de mesures\n",
     "#ces valeurs sont faibles, pour que le programme ne prenne pas trop de temps\n",
     "\n",
     "mo=[]\n",
@@ -120,8 +119,8 @@
     "for j in range(1,p+1):\n",
     "    x=[]\n",
     "    for i in range (1,N+1):\n",
-    "        x.append(random.gauss(m,sigma)) #série i : gaussienne(moyenne, écart type)\n",
-    "        mi=statistics.mean(x) #moyenne de la série i\n",
+    "        x.append(random.gauss(m,sigma)) #série j : gaussienne(moyenne, écart type)\n",
+    "    mi=statistics.mean(x) #moyenne de la série j\n",
     "    mo.append(mi)# liste des moyennes expérimentales     \n",
     "\n",
     "plt.hist(mo,bins=50,range=(2.4,2.6)) #histogramme des moyennes\n",
@@ -130,24 +129,6 @@
     "sigmamoy=statistics.pstdev(mo) #écart type expériemtal des moyennes\n",
     "sigmamoye=sigma/sqrt(N) # écart type theorique des moyennes\n",
     "print('écart type expérimental des moyennes=',sigmamoy,'sigma/sqrt(n)=',sigmamoye)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ceae23ec",
-   "metadata": {},
-   "source": [
-    "Résultat avec $N=10000$ et $p=200$\n",
-    "\n",
-    "écart type expérimental des moyennes= 0.015724927265771526 ;  sigma/sqrt(N)= 0.015811388300841896"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a8733ce9",
-   "metadata": {},
-   "source": [
-    "![histogramme](histogramme_moyenne.png \"\")"
    ]
   },
   {
@@ -279,13 +260,13 @@
     "\n",
     "On peut de la même façon tester la compatibilité d'une mesure au sein d'un ensemble de mesures en calculant \n",
     "\n",
-    "$$z=\\frac{X-\\overline{X}}{u(X)}$$ \n",
+    "$$z=\\frac{|X-\\overline{X}|}{u(X)}$$ \n",
     "\n",
     "avec le même critère : on doit avoir $z<2$ sinon la mesure n'est pas pertinente.\n",
     "\n",
     "On peut enfin comparer 2 mesures différentes en définissant \n",
     "\n",
-    "$$z_{1,2}=\\frac{X_1-X_2}{\\sqrt{u(X_1)^2+u(X_2)^2}}$$ \n",
+    "$$z_{1,2}=\\frac{|X_1-X_2|}{\\sqrt{u(X_1)^2+u(X_2)^2}}$$ \n",
     "\n",
     "avec toujours le même critère : $z_{1,2}$ doit être inférieure à 2"
    ]
